Messages in ChatViewController

--- a/EyeTypeChat/Base.lproj/Main.storyboard
+++ b/EyeTypeChat/Base.lproj/Main.storyboard
@@ -143,7 +143,7 @@
         <!--Root View Controller-->
         <scene sceneID="SP6-8M-JJ2">
             <objects>
-                <tableViewController id="0ko-00-bdu" sceneMemberID="viewController">
+                <tableViewController id="0ko-00-bdu" customClass="ChatViewController" customModule="EyeTypeChat" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="UCJ-dq-pp7">
                         <rect key="frame" x="0.0" y="0.0" width="248" height="461"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
