--- a/EyeTypeChat/Base.lproj/Main.storyboard
+++ b/EyeTypeChat/Base.lproj/Main.storyboard
@@ -144,47 +144,61 @@
         <scene sceneID="SP6-8M-JJ2">
             <objects>
                 <tableViewController storyboardIdentifier="chat" id="0ko-00-bdu" customClass="ChatViewController" customModule="EyeTypeChat" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="UCJ-dq-pp7">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="60" sectionFooterHeight="1" id="UCJ-dq-pp7">
                         <rect key="frame" x="0.0" y="0.0" width="248" height="461"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="chatCell" rowHeight="70" id="LD3-Kw-qJX" customClass="ChatTableViewCell" customModule="EyeTypeChat" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="chatCell" rowHeight="50" id="LD3-Kw-qJX" customClass="ChatTableViewCell" customModule="EyeTypeChat" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LD3-Kw-qJX" id="S7A-w8-qH5">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" ambiguous="YES" misplaced="YES" text="sentDate" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n0P-GN-dy5">
-                                            <rect key="frame" x="170" y="8" width="70" height="26.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                            <color key="textColor" red="0.60000002384185791" green="0.60000002384185791" blue="0.60000002384185791" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" ambiguous="YES" misplaced="YES" text="from" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n2g-Mr-9M9">
-                                            <rect key="frame" x="44" y="8" width="111" height="26.5"/>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="from" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n2g-Mr-9M9">
+                                            <rect key="frame" x="44" y="-4" width="111" height="35"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="111" id="ybR-0D-Xlw"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" ambiguous="YES" misplaced="YES" text="message" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hU-aB-Nzy">
-                                            <rect key="frame" x="44" y="36" width="127" height="26"/>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="message" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hU-aB-Nzy">
+                                            <rect key="frame" x="44" y="15" width="146" height="35"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hB4-vX-WC4">
-                                            <rect key="frame" x="8" y="8" width="28" height="26.5"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hB4-vX-WC4">
+                                            <rect key="frame" x="8" y="4" width="28" height="27"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="28" id="tf2-wh-qOi"/>
+                                            </constraints>
                                         </imageView>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" horizontalHuggingPriority="249" text="sentDate" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n0P-GN-dy5">
+                                            <rect key="frame" x="170" y="0.0" width="70" height="27"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="27" id="Dsp-GH-XlE"/>
+                                                <constraint firstAttribute="width" constant="70" id="KpO-JH-NAs"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                            <color key="textColor" red="0.60000002384185791" green="0.60000002384185791" blue="0.60000002384185791" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="trailing" secondItem="S7A-w8-qH5" secondAttribute="trailingMargin" id="2nl-6v-m0e"/>
-                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="top" secondItem="n2g-Mr-9M9" secondAttribute="bottom" constant="1.5" id="9Pr-a6-cxy"/>
-                                        <constraint firstItem="n2g-Mr-9M9" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="topMargin" id="EUA-oV-75b"/>
-                                        <constraint firstItem="hB4-vX-WC4" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="topMargin" id="VKn-9m-CJ9"/>
-                                        <constraint firstItem="n2g-Mr-9M9" firstAttribute="leading" secondItem="hB4-vX-WC4" secondAttribute="trailing" constant="8" id="YC4-ft-l8f"/>
-                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="leading" secondItem="n2g-Mr-9M9" secondAttribute="leading" id="a6H-Kg-fSc"/>
-                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="leading" secondItem="n2g-Mr-9M9" secondAttribute="trailing" constant="15" id="lag-ID-oj2"/>
-                                        <constraint firstItem="hB4-vX-WC4" firstAttribute="leading" secondItem="S7A-w8-qH5" secondAttribute="leadingMargin" id="nB1-cj-rIW"/>
-                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="bottom" secondItem="S7A-w8-qH5" secondAttribute="bottomMargin" id="nJw-Od-OcG"/>
+                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="centerY" secondItem="n2g-Mr-9M9" secondAttribute="centerY" id="9aM-Wi-5zT"/>
+                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="leading" secondItem="n2g-Mr-9M9" secondAttribute="leading" id="CnS-ZU-MV0"/>
+                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="trailing" secondItem="S7A-w8-qH5" secondAttribute="trailingMargin" id="Kbj-bt-xQQ"/>
+                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="leading" secondItem="n2g-Mr-9M9" secondAttribute="trailing" constant="15" id="Lut-XU-yBR"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="0hU-aB-Nzy" secondAttribute="bottom" constant="-8.5" id="Nfn-9o-gQx"/>
+                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="topMargin" constant="7" id="U4x-C9-UcR"/>
+                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="top" id="bfs-hZ-gN4"/>
+                                        <constraint firstItem="hB4-vX-WC4" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="topMargin" constant="-4" id="hBe-JP-kDG"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="hB4-vX-WC4" secondAttribute="bottom" constant="10.5" id="iC5-XN-Vd4"/>
+                                        <constraint firstItem="n2g-Mr-9M9" firstAttribute="leading" secondItem="hB4-vX-WC4" secondAttribute="trailing" constant="8" id="klL-Fe-LTH"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="0hU-aB-Nzy" secondAttribute="trailing" constant="50" id="owF-UE-xOg"/>
+                                        <constraint firstItem="hB4-vX-WC4" firstAttribute="leading" secondItem="S7A-w8-qH5" secondAttribute="leadingMargin" id="tkt-zc-0WU"/>
+                                        <constraint firstItem="hB4-vX-WC4" firstAttribute="bottom" secondItem="n2g-Mr-9M9" secondAttribute="bottom" id="x2i-hr-qmw"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
