--- a/EyeTypeChat/Base.lproj/Main.storyboard
+++ b/EyeTypeChat/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -155,50 +155,41 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="from" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n2g-Mr-9M9">
-                                            <rect key="frame" x="44" y="-4" width="111" height="35"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="111" id="ybR-0D-Xlw"/>
-                                            </constraints>
+                                            <rect key="frame" x="43" y="5" width="33.5" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="message" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hU-aB-Nzy">
-                                            <rect key="frame" x="44" y="15" width="146" height="35"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hB4-vX-WC4">
-                                            <rect key="frame" x="8" y="4" width="28" height="27"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="28" id="tf2-wh-qOi"/>
-                                            </constraints>
+                                            <rect key="frame" x="8" y="4" width="27" height="27"/>
                                         </imageView>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" horizontalHuggingPriority="249" text="sentDate" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n0P-GN-dy5">
-                                            <rect key="frame" x="170" y="0.0" width="70" height="27"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="27" id="Dsp-GH-XlE"/>
-                                                <constraint firstAttribute="width" constant="70" id="KpO-JH-NAs"/>
-                                            </constraints>
+                                            <rect key="frame" x="84" y="0.0" width="156" height="27"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                             <color key="textColor" red="0.60000002384185791" green="0.60000002384185791" blue="0.60000002384185791" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="message" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hU-aB-Nzy">
+                                            <rect key="frame" x="43" y="23" width="58" height="35"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="centerY" secondItem="n2g-Mr-9M9" secondAttribute="centerY" id="9aM-Wi-5zT"/>
-                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="leading" secondItem="n2g-Mr-9M9" secondAttribute="leading" id="CnS-ZU-MV0"/>
-                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="trailing" secondItem="S7A-w8-qH5" secondAttribute="trailingMargin" id="Kbj-bt-xQQ"/>
-                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="leading" secondItem="n2g-Mr-9M9" secondAttribute="trailing" constant="15" id="Lut-XU-yBR"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="0hU-aB-Nzy" secondAttribute="bottom" constant="-8.5" id="Nfn-9o-gQx"/>
-                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="topMargin" constant="7" id="U4x-C9-UcR"/>
-                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="top" id="bfs-hZ-gN4"/>
-                                        <constraint firstItem="hB4-vX-WC4" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="topMargin" constant="-4" id="hBe-JP-kDG"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="hB4-vX-WC4" secondAttribute="bottom" constant="10.5" id="iC5-XN-Vd4"/>
-                                        <constraint firstItem="n2g-Mr-9M9" firstAttribute="leading" secondItem="hB4-vX-WC4" secondAttribute="trailing" constant="8" id="klL-Fe-LTH"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="0hU-aB-Nzy" secondAttribute="trailing" constant="50" id="owF-UE-xOg"/>
-                                        <constraint firstItem="hB4-vX-WC4" firstAttribute="leading" secondItem="S7A-w8-qH5" secondAttribute="leadingMargin" id="tkt-zc-0WU"/>
-                                        <constraint firstItem="hB4-vX-WC4" firstAttribute="bottom" secondItem="n2g-Mr-9M9" secondAttribute="bottom" id="x2i-hr-qmw"/>
+                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="topMargin" constant="15" id="EcL-nx-GKk"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="0hU-aB-Nzy" secondAttribute="bottom" constant="-16.5" id="GWw-Fk-gKO"/>
+                                        <constraint firstItem="n2g-Mr-9M9" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="topMargin" constant="-3" id="Hxo-Vj-bgl"/>
+                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="top" id="ILL-JH-pv0"/>
+                                        <constraint firstItem="hB4-vX-WC4" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="topMargin" constant="-4" id="Pln-Fc-ipq"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="n0P-GN-dy5" secondAttribute="bottom" constant="14.5" id="a8C-Kh-6WJ"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="hB4-vX-WC4" secondAttribute="bottom" constant="10.5" id="bne-Qf-7uk"/>
+                                        <constraint firstItem="n2g-Mr-9M9" firstAttribute="leading" secondItem="hB4-vX-WC4" secondAttribute="trailing" constant="8" symbolic="YES" id="d2p-ft-qgo"/>
+                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="leading" secondItem="hB4-vX-WC4" secondAttribute="trailing" constant="8" symbolic="YES" id="dla-R8-I5G"/>
+                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="leading" secondItem="n2g-Mr-9M9" secondAttribute="trailing" constant="8" symbolic="YES" id="k4j-Zg-RzB"/>
+                                        <constraint firstItem="hB4-vX-WC4" firstAttribute="leading" secondItem="S7A-w8-qH5" secondAttribute="leadingMargin" id="sWa-cb-dhh"/>
+                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="trailing" secondItem="S7A-w8-qH5" secondAttribute="trailingMargin" id="tDA-D5-yct"/>
+                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="leading" secondItem="S7A-w8-qH5" secondAttribute="leadingMargin" constant="35" id="vpn-12-TGa"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="n2g-Mr-9M9" secondAttribute="bottom" constant="16.5" id="zNC-Cz-OsA"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
