--- a/EyeTypeChat/Base.lproj/Main.storyboard
+++ b/EyeTypeChat/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -149,48 +150,69 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="chatCell" rowHeight="50" id="LD3-Kw-qJX" customClass="ChatTableViewCell" customModule="EyeTypeChat" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="center" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" selectionStyle="none" indentationWidth="0.0" reuseIdentifier="chatCell" id="LD3-Kw-qJX" customClass="ChatTableViewCell" customModule="EyeTypeChat" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LD3-Kw-qJX" id="S7A-w8-qH5">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" tableViewCell="LD3-Kw-qJX" id="S7A-w8-qH5">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="from" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n2g-Mr-9M9">
-                                            <rect key="frame" x="43" y="5" width="33.5" height="20"/>
+                                            <rect key="frame" x="43" y="5" width="78" height="19.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hB4-vX-WC4">
-                                            <rect key="frame" x="8" y="4" width="27" height="27"/>
+                                            <rect key="frame" x="8" y="4" width="27" height="20.5"/>
                                         </imageView>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" verticalHuggingPriority="249" text="message" lineBreakMode="characterWrap" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hU-aB-Nzy">
+                                            <rect key="frame" x="43" y="26" width="58" height="25.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" horizontalHuggingPriority="249" text="sentDate" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n0P-GN-dy5">
-                                            <rect key="frame" x="84" y="0.0" width="156" height="27"/>
+                                            <rect key="frame" x="129" y="4" width="111" height="19"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                             <color key="textColor" red="0.60000002384185791" green="0.60000002384185791" blue="0.60000002384185791" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="message" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hU-aB-Nzy">
-                                            <rect key="frame" x="43" y="23" width="58" height="35"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="topMargin" constant="15" id="EcL-nx-GKk"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="0hU-aB-Nzy" secondAttribute="bottom" constant="-16.5" id="GWw-Fk-gKO"/>
+                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="top" secondItem="n2g-Mr-9M9" secondAttribute="bottom" constant="1.5" id="1DG-69-TsV"/>
+                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="topMargin" constant="25" id="3x6-8l-8gl"/>
+                                        <constraint firstItem="n2g-Mr-9M9" firstAttribute="top" secondItem="hB4-vX-WC4" secondAttribute="top" constant="1" id="7N5-D1-Z4c"/>
+                                        <constraint firstItem="n2g-Mr-9M9" firstAttribute="bottom" secondItem="hB4-vX-WC4" secondAttribute="bottom" id="83K-qk-C4h"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="hB4-vX-WC4" secondAttribute="bottom" constant="27" id="Asm-VD-XQG"/>
+                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="baseline" secondItem="n2g-Mr-9M9" secondAttribute="firstBaseline" id="EDY-1S-UPy"/>
+                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="leading" secondItem="hB4-vX-WC4" secondAttribute="trailing" constant="94" id="EuI-O0-QvC"/>
                                         <constraint firstItem="n2g-Mr-9M9" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="topMargin" constant="-3" id="Hxo-Vj-bgl"/>
                                         <constraint firstItem="n0P-GN-dy5" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="top" id="ILL-JH-pv0"/>
+                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="top" secondItem="hB4-vX-WC4" secondAttribute="top" id="JC1-Fd-vkA"/>
+                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="bottom" secondItem="S7A-w8-qH5" secondAttribute="bottomMargin" id="JNx-gY-oCx"/>
                                         <constraint firstItem="hB4-vX-WC4" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="topMargin" constant="-4" id="Pln-Fc-ipq"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="n0P-GN-dy5" secondAttribute="bottom" constant="14.5" id="a8C-Kh-6WJ"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="hB4-vX-WC4" secondAttribute="bottom" constant="10.5" id="bne-Qf-7uk"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="0hU-aB-Nzy" secondAttribute="trailing" constant="139" id="cgF-gb-mas"/>
+                                        <constraint firstItem="0hU-aB-Nzy" firstAttribute="top" secondItem="n2g-Mr-9M9" secondAttribute="bottom" constant="-2" id="cz7-qT-ft2"/>
                                         <constraint firstItem="n2g-Mr-9M9" firstAttribute="leading" secondItem="hB4-vX-WC4" secondAttribute="trailing" constant="8" symbolic="YES" id="d2p-ft-qgo"/>
                                         <constraint firstItem="0hU-aB-Nzy" firstAttribute="leading" secondItem="hB4-vX-WC4" secondAttribute="trailing" constant="8" symbolic="YES" id="dla-R8-I5G"/>
-                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="leading" secondItem="n2g-Mr-9M9" secondAttribute="trailing" constant="8" symbolic="YES" id="k4j-Zg-RzB"/>
+                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="leading" secondItem="hB4-vX-WC4" secondAttribute="trailing" constant="94" id="lhG-KC-5iG"/>
+                                        <constraint firstItem="n2g-Mr-9M9" firstAttribute="centerX" secondItem="0hU-aB-Nzy" secondAttribute="centerX" constant="10" id="p1e-JG-pPw"/>
+                                        <constraint firstItem="n2g-Mr-9M9" firstAttribute="leading" secondItem="0hU-aB-Nzy" secondAttribute="leading" id="sJ3-6o-jcM"/>
                                         <constraint firstItem="hB4-vX-WC4" firstAttribute="leading" secondItem="S7A-w8-qH5" secondAttribute="leadingMargin" id="sWa-cb-dhh"/>
                                         <constraint firstItem="n0P-GN-dy5" firstAttribute="trailing" secondItem="S7A-w8-qH5" secondAttribute="trailingMargin" id="tDA-D5-yct"/>
+                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="top" secondItem="hB4-vX-WC4" secondAttribute="top" id="vCF-sM-Hko"/>
                                         <constraint firstItem="0hU-aB-Nzy" firstAttribute="leading" secondItem="S7A-w8-qH5" secondAttribute="leadingMargin" constant="35" id="vpn-12-TGa"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="n2g-Mr-9M9" secondAttribute="bottom" constant="16.5" id="zNC-Cz-OsA"/>
+                                        <constraint firstItem="n0P-GN-dy5" firstAttribute="top" secondItem="S7A-w8-qH5" secondAttribute="topMargin" constant="-4" id="yqG-15-c7o"/>
                                     </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="Asm-VD-XQG"/>
+                                            <exclude reference="Pln-Fc-ipq"/>
+                                            <exclude reference="Hxo-Vj-bgl"/>
+                                            <exclude reference="3x6-8l-8gl"/>
+                                            <exclude reference="cz7-qT-ft2"/>
+                                            <exclude reference="ILL-JH-pv0"/>
+                                            <exclude reference="JC1-Fd-vkA"/>
+                                        </mask>
+                                    </variation>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="fromLabel" destination="n2g-Mr-9M9" id="FO5-it-5iz"/>
